fixing overflow

--- a/css/stylehome.css
+++ b/css/stylehome.css
@@ -79,7 +79,7 @@ li{
     border-radius: 4px;
 }
 @media screen and (max-width:630px) {
-   body{
+   body , html{
     overflow-x: hidden;
    }
     .menuicon{
